--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
         <!-- Header -->
         <div class="header">
             <h1>👨‍⚕️ Dr. Shoaibs Lern-App</h1>
-            <p>Deutsch ↔ Arabisch</p>
         </div>
 
         <!-- Tab Bar -->
         <div class="tab-bar">
             <div class="tab active" data-tab="categories" onclick="switchTab('categories')">📖 Kapitel</div>
             <div class="tab" data-tab="upload" onclick="switchTab('upload')">📤 Upload</div>
-            <div class="tab" data-tab="learn" onclick="switchTab('learn')">🎯 Lernen</div>
-            <div class="tab" data-tab="stats" onclick="switchTab('stats')">📊 Statistik</div>
+            <div class="tab" data-tab="islam" onclick="switchTab('islam')">☪️ Islam</div>
         </div>
 
         <!-- ===== KAPITEL TAB ===== -->
@@ -97,7 +95,7 @@
                         style="background: var(--bg-light); padding: 2px 6px; border-radius: 4px; font-size: 11px;">deutsch;arabisch</code>
                     oder <code
                         style="background: var(--bg-light); padding: 2px 6px; border-radius: 4px; font-size: 11px;">arabisch;deutsch</code><br>
-                    Spaltenreihenfolge wird automatisch erkannt · Karten: DE→AR
+                    Vorschau zum Prüfen & Bearbeiten vor dem Import
                 </p>
                 <label
                     style="display: block; margin-bottom: 5px; font-weight: 600; color: var(--text-secondary); font-size: 14px;">Kapitel:</label>
@@ -139,24 +137,32 @@
             </div>
         </div>
 
-        <!-- ===== LERNEN TAB ===== -->
-        <div id="learn" class="content">
-            <div id="learnArea">
-                <div class="empty-state">
-                    <div class="empty-icon">🎯</div>
-                    <p>Wähle ein Kapitel<br>und starte eine Lernsession!</p>
-                </div>
+        <!-- ===== ISLAM TAB ===== -->
+        <div id="islam" class="content">
+            <div id="islamArea">
+                <!-- Subcategories rendered by JS -->
             </div>
+            <div id="prayerContent" style="display:none;"></div>
         </div>
+    </div>
 
-        <!-- ===== STATISTIK TAB ===== -->
-        <div id="stats" class="content">
-            <div id="statsArea">
-                <div class="empty-state">
-                    <div class="empty-icon">📊</div>
-                    <p>Starte eine Lernsession<br>um Statistiken zu sehen!</p>
-                </div>
-            </div>
+    <!-- ===== QURAN READER OVERLAY ===== -->
+    <div id="quranOverlay" class="quran-overlay">
+        <div class="quran-header">
+            <button class="quran-close-btn" onclick="QuranReader.close()">✕</button>
+            <h2 class="quran-title">📖 القرآن الكريم</h2>
+            <button class="quran-goto-btn" onclick="quranGoToPage()">📄</button>
+        </div>
+        <div class="quran-loading" id="quranLoading" style="display:none;">📖 Laden...</div>
+        <div class="quran-canvas-container" id="quranCanvasContainer"></div>
+        <div class="quran-nav">
+            <button class="quran-nav-btn" id="quranPrevBtn" onclick="QuranReader.flipPrev()">
+                <span class="nav-arrow">‹</span>
+            </button>
+            <span class="quran-page-info" id="quranPageInfo">Seite 1 / ?</span>
+            <button class="quran-nav-btn" id="quranNextBtn" onclick="QuranReader.flipNext()">
+                <span class="nav-arrow">›</span>
+            </button>
         </div>
     </div>
 
@@ -192,6 +198,9 @@
     <script src="pdf-handler.js"></script>
     <script src="stats.js"></script>
     <script src="quiz.js"></script>
+    <script src="quran-data.js"></script>
+    <script src="quran-reader.js"></script>
+    <script src="prayer-times.js"></script>
     <script src="app.js"></script>
 </body>
 
