--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta name="apple-mobile-web-app-title" content="Lern-App">
     <meta name="description" content="Deutsch-Arabisch Lernkarten mit OCR & Quiz">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon-180.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +41,7 @@
     <div class="app-container">
         <!-- Header -->
         <div class="header">
-            <h1>👨‍⚕️ Dr. Shoaibs Lern-App</h1>
+            <h1><img src="assets/icon-128.png" alt="App Logo" class="header-logo"> Dr. Shoaibs Lern-App</h1>
         </div>
 
         <!-- Tab Bar -->
