--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <!-- ===== QIBLA FINDER OVERLAY ===== -->
     <div id="qiblaOverlay" class="qibla-overlay">
         <div class="qibla-header">
-            <button class="qibla-close-btn" onclick="QiblaFinder.close()">✕</button>
-            <h2 class="qibla-title">🧭 القبلة</h2>
-            <div style="width: 40px"></div>
+            <button class="qibla-back-btn" onclick="QiblaFinder.close()">‹ Zurück</button>
+            <h2 class="qibla-title">🧭 Qibla Finder</h2>
+            <div style="width: 70px"></div>
         </div>
         <div class="qibla-content" id="qiblaContent"></div>
     </div>
