--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="app-container">
         <!-- Header -->
         <div class="header">
-            <h1>👨‍⚕️ Dr. Shoaibs Lern-App</h1>
+            <h1><img src="assets/doctor-icon.png" class="doctor-avatar" alt="Doctor"> Dr. Shoaibs Lern-App</h1>
         </div>
 
         <!-- Tab Bar -->
