--- a/web/index.html
+++ b/web/index.html
@@ -56,7 +56,30 @@
 
         <!-- ===== LERNEN TAB ===== -->
         <div id="categories" class="content active">
-            <button class="btn btn-primary btn-small mb-md" onclick="openNewCatModal()">+ Neues Kapitel</button>
+            <div class="lernen-header-row">
+                <button class="btn btn-primary btn-small" onclick="openNewCatModal()">+ Neues Kapitel</button>
+                <div class="gear-menu-wrapper" id="gearMenuWrapper">
+                    <button class="icon-btn gear-btn" onclick="toggleGearMenu(event)" aria-label="Einstellungen">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="3" />
+                            <path
+                                d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 1 1-2.83 2.83l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 1 1-4 0v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 1 1-2.83-2.83l.06-.06A1.65 1.65 0 0 0 4.68 15a1.65 1.65 0 0 0-1.51-1H3a2 2 0 1 1 0-4h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 1 1 2.83-2.83l.06.06A1.65 1.65 0 0 0 9 4.68a1.65 1.65 0 0 0 1-1.51V3a2 2 0 1 1 4 0v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 1 1 2.83 2.83l-.06.06A1.65 1.65 0 0 0 19.4 9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 1 1 0 4h-.09a1.65 1.65 0 0 0-1.51 1z" />
+                        </svg>
+                    </button>
+                    <div class="gear-popup" id="gearPopup">
+                        <button class="gear-popup-item" onclick="triggerImport(); closeGearMenu();">
+                            <span>📥</span> Kapitel importieren
+                        </button>
+                        <button class="gear-popup-item" onclick="showGlobalExportDialog(); closeGearMenu();">
+                            <span>📤</span> Kapitel exportieren
+                        </button>
+                        <button class="gear-popup-item" onclick="showGlobalMergeDialog(); closeGearMenu();">
+                            <span>⤵️</span> Zusammenfassen
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div id="categoryGrid" class="category-grid"></div>
         </div>
 
