feat: FSRS Spaced Repetition System — full implementation
- fsrs-core.js: FSRS-5 scheduling engine (19 params, 4 ratings)
- srs-db.js: IndexedDB storage (srs_cards, srs_reviews, srs_meta)
- srs-adapter.js: zero-touch bridge from localStorage to IndexedDB
- srs-ui.js: fullscreen review UI with dashboard, settings, export/import
- SRS CSS added to styles.css
- SRS button added to mode selector in app.js
- No changes to CSV import or Quiz code

--- a/web/index.html
+++ b/web/index.html
@@ -364,6 +364,11 @@
     <script src="ebook-detect.js"></script>
     <script src="ebook-readers.js"></script>
     <script src="ebook-ui.js"></script>
+    <!-- SRS Spaced Repetition modules -->
+    <script src="fsrs-core.js"></script>
+    <script src="srs-db.js"></script>
+    <script src="srs-adapter.js"></script>
+    <script src="srs-ui.js"></script>
     <script src="app.js"></script>
 </body>
 
